# video-stackr

./: .dockerignore  Dockerfile  pyproject.toml
scripts/: ui.sh
