[tool.poetry]
name = "video-stackr"
version = "0.1.0"
description = ""
authors = ["Mike Barborak <mike@barborak.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "<3.11,>=3.9"
pyside6-essentials = "6.4.2"
opencv-python-headless = "4.7.0.72"
numpy = "1.23.5"
numba = "0.56.4"
rawpy = "0.18.1"
imageio = "2.29.0"
pyfftw = "0.13.1"
markupsafe = "2.1.2"
scipy = "1.10.0"
qt-material = "^2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
